<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".activities.MostPopularHomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg"
        android:layout_weight="30"
        android:weightSum="100"
        android:orientation="vertical">



        <TextView
            android:id="@+id/tvMainTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:gravity="center_vertical"
            android:text="@string/main_title"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-condensed"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:gravity="bottom|end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnCentigrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/main_reload"
                android:visibility="gone"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:textAlignment="center"
                android:textSize="30sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="10dp"
                android:textColor="@android:color/white"
                android:text="@string/main_degree_separator"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/btnFht"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textColor="@android:color/white"
                android:text="@string/main_degree_fahrenheit"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:textAlignment="center"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0"
            android:gravity="bottom|start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLastUpdated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:text="@string/main_date"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tvMainDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd" />
        </LinearLayout>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"

        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />
</LinearLayout>